プロジェクトの属性変更

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -37,7 +37,7 @@
   
   <tr>
     <th>削除</th>
-    <td><%= check_box_tag @project.available, true, false, :disabled => true  %></td>
+    <td><%= check_box_tag @project.delete_flag, :disabled => true  %></td>
   </tr>
 
 </table>
