--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -20,7 +20,7 @@
      <td height="30", width="100"><%= project.end_date  %></td>
      <td height="30", width="100"><%= project.user.user_name if project.user %></td>
      <td height="30", width="100"><%= project.sts  %></td>
-     <td height="30", width="100"><%= check_box_tag project.available, true, false, :disabled => true  %></td>
+     <td height="30", width="100"><%= check_box_tag project.delete_flag, :disabled => true  %></td>
   </tr>
 <% end %>
 </table>
