--- a/app/views/meetings/new.html.erb
+++ b/app/views/meetings/new.html.erb
@@ -1,10 +1,6 @@
 <h1><%= @title  %></h1>
+
 <%= form_for(@meeting) do |f| %>
-<%
-=begin %>
-<%= form_for(@meeting, :url => {:action => 'new'}) do |f| %>
-<%
-=end %>
 
   <% if @meeting.errors.any? %>
     <div id="error_explanation">
@@ -18,7 +14,7 @@
     </div>
   <% end %>
   
-  <table>
+  <table id="new_table">
     <tr>
       <th>プロジェクト</th>
       <td>
@@ -53,7 +49,7 @@
     <tr>
       <th>主催者</th>
       <td>
-        <%= select_tag 'meeting[user_id]', options_from_collection_for_select(@users, :id, :user_name) %>
+        <%= render 'meeting_users_select', {:f => f} %>
       </td> 
     </tr>
     <tr>
