ユーザ一括廃止画面のラベル修正

--- a/app/views/abolition_users/index.html.erb
+++ b/app/views/abolition_users/index.html.erb
@@ -3,10 +3,11 @@
 <form method="post" action="/abolition_users/index">
   <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>" />
 
+<h3>廃止するユーザにチェックを入れてください</h3>
 <table rules="rows">
 
   <tr>
-    <th>有効&nbsp;&nbsp;</th>
+    <th>チェック&nbsp;&nbsp;</th>
     <th>ユーザ名&nbsp;&nbsp;</th>
     <th>メールアドレス&nbsp;&nbsp;</th>
   </tr>
