--- a/app/views/meetings/new.html.erb
+++ b/app/views/meetings/new.html.erb
@@ -53,7 +53,13 @@
     <tr>
       <th>主催者</th>
       <td>
+      
+      
+		<%= render partial: '主催者', locals: {project_id: @projects.first.id } %>
+<--
         <%= select_tag 'meeting[user_id]', options_from_collection_for_select(@users, :id, :user_name) %>
+-->
+
       </td> 
     </tr>
     <tr>
