--- a/app/views/project_users/index.html.erb
+++ b/app/views/project_users/index.html.erb
@@ -1,5 +1,8 @@
 <%= javascript_include_tag "application" %>
 
+
+<h1><%= @title  %></h1>
+
 <table rules="rows">
   <tr>
     <th>プロジェクト&nbsp;&nbsp</th>
