--- a/app/views/project_users/show.html.erb
+++ b/app/views/project_users/show.html.erb
@@ -1,7 +1,7 @@
 ﻿<%= javascript_include_tag "application" %>
-
 <p id="notice"><%= notice %></p>
-
+<% @page_title = "プロジェクトユーザ詳細" %>
+<h1><%= @page_title  %></h1>
 <p>
   <b>プロジェクト:</b>
   <%= @project_user.project.name if @project_user.project %>
